rename insight article names and links

--- a/en/neuronkit/insights/index.html
+++ b/en/neuronkit/insights/index.html
@@ -44,11 +44,11 @@
         <a href="/en/neuronkit/index.html#features" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Solution</a>
         <div class="mt-1">
           <div class="px-3 text-xs uppercase tracking-wide text-zinc-500">Insights</div>
-          <a href="/en/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">E‑commerce Report</a>
-          <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">From Clickstream to Dialogstream</a>
-          <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Sandboxing for Agents</a>
-          <a href="/en/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agentic Interface</a>
-          <a href="/en/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agent's Cage</a>
+          <a href="/en/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">E‑commerce Reinvented</a>
+          <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">From Clicks to Conversations: A Visual Guide</a>
+          <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Sandboxing Agentic Systems</a>
+          <a href="/en/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agentic Interface: Hybrid Conversational UI</a>
+          <a href="/en/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agent’s Cage: Securing Autonomous Systems</a>
           <a href="/en/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agentic Economy</a>
           <a href="/en/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">All Insights</a>
         </div>
@@ -68,42 +68,42 @@
         <!-- Card: E-commerce whitepaper -->
         <a href="/en/neuronkit/whitepaper/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
-          <h2 class="mt-1 font-semibold">The Transformation of E-commerce: From Clickstream to Dialog Stream and Beyond</h2>
+          <h2 class="mt-1 font-semibold">E‑commerce Reinvented: From Clickstream to Dialogstream</h2>
           <p class="mt-2 text-sm text-zinc-600">How dialog streams and agentic UX reshape funnels, personalization, and measurement in a cookieless world.</p>
         </a>
 
         <!-- Card: From Clickstream to Dialogstream (HTML) -->
         <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Insight</div>
-          <h2 class="mt-1 font-semibold">From Clickstream to Dialogstream</h2>
+          <h2 class="mt-1 font-semibold">From Clicks to Conversations: A Visual Guide</h2>
           <p class="mt-2 text-sm text-zinc-600">A visual tour of the agentic shift and generative UI, with charts and diagrams.</p>
         </a>
 
         <!-- Card: Sandboxing for Agents -->
         <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Whitepaper</div>
-          <h2 class="mt-1 font-semibold">Sandboxing for Agentic Systems</h2>
+          <h2 class="mt-1 font-semibold">Sandboxing Agentic Systems: A Playbook</h2>
           <p class="mt-2 text-sm text-zinc-600">A practical taxonomy and design patterns for securing agent-generated actions.</p>
         </a>
 
         <!-- Card: Agentic Interface report -->
         <a href="/en/neuronkit/insights/agentic-interface/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
-          <h2 class="mt-1 font-semibold">The Agentic Interface</h2>
+          <h2 class="mt-1 font-semibold">The Agentic Interface: Designing Hybrid Conversational UI</h2>
           <p class="mt-2 text-sm text-zinc-600">Protocol stack, design principles, and case studies for the emerging agentic UX.</p>
         </a>
 
         <!-- Card: Agent's Cage -->
         <a href="/en/neuronkit/insights/agent-cage/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Whitepaper</div>
-          <h2 class="mt-1 font-semibold">The Agent's Cage</h2>
+          <h2 class="mt-1 font-semibold">The Agent’s Cage: Securing Autonomous Systems</h2>
           <p class="mt-2 text-sm text-zinc-600">Comprehensive paper on sandboxing autonomous systems and governance layers.</p>
         </a>
 
         <!-- Card: Agentic Economy -->
         <a href="/en/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
-          <h2 class="mt-1 font-semibold">The Agentic Economy: New Playbook for Digital Monetization</h2>
+          <h2 class="mt-1 font-semibold">The Agentic Economy: A New Playbook for Monetization</h2>
           <p class="mt-2 text-sm text-zinc-600">From eyeballs to agents: AI-native pricing models, M2M payments, and trust frameworks.</p>
         </a>
       </div>
