--- a/zh/neuronkit/insights/index.html
+++ b/zh/neuronkit/insights/index.html
@@ -44,12 +44,12 @@
         <a href="/zh/neuronkit/index.html#features" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">方案</a>
         <div class="mt-1">
           <div class="px-3 text-xs uppercase tracking-wide text-zinc-500">洞见</div>
-          <a href="/zh/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">电商：从点击流到对话流</a>
-          <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">从点击流到对话流（可视化）</a>
-          <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">面向 Agent 的沙箱</a>
-          <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agentic 界面报告</a>
-          <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agent 的“牢笼”</a>
-          <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">智能体经济新指南</a>
+          <a href="/zh/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">电商重构：从点击流到对话流</a>
+          <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">从点击到对话：可视化指南</a>
+          <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agent 沙箱实战手册</a>
+          <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agentic 界面：对话式混合UI设计</a>
+          <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">智能体的牢笼：自治系统安全</a>
+          <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">智能体经济：AI时代的货币化</a>
           <a href="/zh/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">洞见首页</a>
         </div>
         <div class="mt-2 grid gap-2">
@@ -67,37 +67,37 @@
       <div class="mt-8 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
         <a href="/zh/neuronkit/whitepaper/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
-          <h2 class="mt-1 font-semibold">电商的转型：从点击流到对话流</h2>
+          <h2 class="mt-1 font-semibold">电商重构：从点击流到对话流</h2>
           <p class="mt-2 text-sm text-zinc-600">对话流与 Agentic 体验如何重塑漏斗、个性化与度量体系。</p>
         </a>
 
         <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">洞见</div>
-          <h2 class="mt-1 font-semibold">从点击流到对话流（可视化）</h2>
+          <h2 class="mt-1 font-semibold">从点击到对话：可视化指南</h2>
           <p class="mt-2 text-sm text-zinc-600">图表展示 Agentic 转型与生成式 UI。</p>
         </a>
 
         <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
-          <h2 class="mt-1 font-semibold">面向 Agent 的沙箱</h2>
+          <h2 class="mt-1 font-semibold">Agent 沙箱实战手册</h2>
           <p class="mt-2 text-sm text-zinc-600">面向代理系统的沙箱分类与设计模式。</p>
         </a>
 
         <a href="/zh/neuronkit/insights/agentic-interface/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
-          <h2 class="mt-1 font-semibold">Agentic 界面：用户体验新范式</h2>
+          <h2 class="mt-1 font-semibold">Agentic 界面：对话式混合UI设计</h2>
           <p class="mt-2 text-sm text-zinc-600">协议栈、设计原则与典型案例。</p>
         </a>
 
         <a href="/zh/neuronkit/insights/agent-cage/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
-          <h2 class="mt-1 font-semibold">Agent 的“牢笼”</h2>
+          <h2 class="mt-1 font-semibold">智能体的牢笼：自治系统安全</h2>
           <p class="mt-2 text-sm text-zinc-600">自治系统的沙箱与治理层实践。</p>
         </a>
 
         <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
-          <h2 class="mt-1 font-semibold">智能体经济新指南：AI 时代数字货币化</h2>
+          <h2 class="mt-1 font-semibold">智能体经济：AI时代的货币化</h2>
           <p class="mt-2 text-sm text-zinc-600">从眼球经济到智能体经济：AI 原生商业模型、金融基础设施与信任框架。</p>
         </a>
       </div>
