--- a/en/neuronkit/insights/from_clickstream_to_dialogstream.html
+++ b/en/neuronkit/insights/from_clickstream_to_dialogstream.html
@@ -6,7 +6,7 @@ layout: none
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Future of UI/UX in the Age of AI Agents</title>
+    <title>From Clicks to Conversations: A Visual Guide</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,8 +24,8 @@ layout: none
     <div class="container mx-auto p-4 md:p-8">
 
         <header class="text-center mb-12 md:mb-16">
-            <h1 class="text-4xl md:text-6xl font-extrabold mb-4">The Agentic Shift</h1>
-            <p class="text-lg md:text-xl text-zinc-600 dark:text-zinc-300">From Click Streams to Dialog Streams: Redefining User Experience in the AI Era</p>
+            <h1 class="text-4xl md:text-6xl font-extrabold mb-4">From Clicks to Conversations</h1>
+            <p class="text-lg md:text-xl text-zinc-600 dark:text-zinc-300">A visual guide to the agentic shift and generative UI</p>
         </header>
 
         <main class="space-y-12 md:space-y-16">
