--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -61,7 +61,7 @@
             <div class="invisible opacity-0 group-hover:visible group-hover:opacity-100 group-focus-within:visible group-focus-within:opacity-100 transition-opacity duration-150 absolute right-0 mt-2 w-80 rounded-xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900 shadow-lg py-2">
               <div class="px-4 py-2 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">最新文章</div>
               <a href="/zh/neuronkit/whitepaper/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">电商：从点击流到对话流</a>
-              <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">从点击流到对话流（可视化）</a>
+              <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">从点击流到对话流（可视化）</a>
               <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">面向 Agent 的沙箱</a>
               <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agentic 界面报告</a>
               <a href="/zh/neuronkit/insights/agent-cage/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agent 的“牢笼”</a>
@@ -162,8 +162,8 @@
             <span class="px-2.5 py-1 text-xs rounded-full bg-cyan-600/10 text-cyan-700 dark:text-cyan-300 border border-cyan-600/20">云 ⇄ 边桥接</span>
           </div>
           <div class="mt-8 flex flex-wrap gap-3">
-            <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">申请早期访问</a>
-            <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">查看洞见</a>
+            <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">申请试用</a>
+            <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">趋势洞察</a>
           </div>
           <div class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">云端“脑”，设备“手”。全面可控。</div>
           <!-- 首屏轮播控制 -->
