--- a/zh/neuronkit/insights/from_clickstream_to_dialogstream.html
+++ b/zh/neuronkit/insights/from_clickstream_to_dialogstream.html
@@ -6,7 +6,7 @@ layout: none
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agentic 转型：从点击流到对话流</title>
+    <title>从点击到对话：可视化指南</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,8 +24,8 @@ layout: none
     <div class="container mx-auto p-4 md:p-8">
 
         <header class="text-center mb-12 md:mb-16">
-            <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Agentic 转型</h1>
-            <p class="text-lg md:text-xl text-zinc-600 dark:text-zinc-300">从点击流到对话流：重塑 AI 时代的用户体验</p>
+            <h1 class="text-4xl md:text-6xl font-extrabold mb-4">从点击到对话</h1>
+            <p class="text-lg md:text-xl text-zinc-600 dark:text-zinc-300">可视化指南：Agentic 转型与生成式 UI</p>
         </header>
 
         <main class="space-y-12 md:space-y-16">
