--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -465,22 +465,45 @@ flowchart LR
       const iconOpen = document.getElementById('icon-hamburger');
       const iconClose = document.getElementById('icon-close');
       if (!btn || !menu) return;
+      function closeMenu(){
+        if (!menu.classList.contains('hidden')) {
+          menu.classList.add('hidden');
+          btn.setAttribute('aria-expanded', 'false');
+          if (iconOpen) iconOpen.classList.remove('hidden');
+          if (iconClose) iconClose.classList.add('hidden');
+        }
+      }
       function toggle(){
-        const open = menu.classList.contains('hidden');
-        menu.classList.toggle('hidden');
-        btn.setAttribute('aria-expanded', String(open));
-        iconOpen.classList.toggle('hidden', !open);
-        iconClose.classList.toggle('hidden', open);
+        const willOpen = menu.classList.contains('hidden');
+        if (willOpen) {
+          menu.classList.remove('hidden');
+          btn.setAttribute('aria-expanded', 'true');
+          if (iconOpen) iconOpen.classList.add('hidden');
+          if (iconClose) iconClose.classList.remove('hidden');
+        } else {
+          closeMenu();
+        }
       }
       btn.addEventListener('click', toggle);
+      // Close on interacting with any link inside the mobile menu (run before navigation)
+      const linkCloseHandler = (e)=>{
+        const link = e.target && e.target.closest && e.target.closest('a');
+        if (link) closeMenu();
+      };
+      menu.addEventListener('pointerdown', linkCloseHandler, true);
+      menu.addEventListener('touchstart', linkCloseHandler, { passive: true, capture: true });
+      menu.addEventListener('click', linkCloseHandler);
       // close when clicking outside
       document.addEventListener('click', (e)=>{
         if (!menu.contains(e.target) && !btn.contains(e.target)) {
-          if (!menu.classList.contains('hidden')) toggle();
+          closeMenu();
         }
       });
       // close on Esc
-      document.addEventListener('keydown', (e)=>{ if (e.key==='Escape' && !menu.classList.contains('hidden')) toggle(); });
+      document.addEventListener('keydown', (e)=>{ if (e.key==='Escape') closeMenu(); });
+      // close on hash navigation or page lifecycle
+      window.addEventListener('hashchange', closeMenu);
+      window.addEventListener('pagehide', closeMenu);
     })();
   </script>
 </body>
