update tagline and slogans

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -306,30 +306,30 @@ flowchart LR
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Rigid UX misses intent</h3>
+            <h3 class="font-semibold text-lg">Clickstreams Can’t Keep Up</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Users expect proactive help. Click‑based flows lose context and drop conversions.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Websites and apps built around clicks and menus are too passive for the AI era. Users expect agents that understand intent and act proactively, not endless navigation. Legacy clickstream UX is becoming a barrier to engagement.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Privacy makes old playbooks obsolete</h3>
+            <h3 class="font-semibold text-lg">Context is Fragmented and Lost</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Cookie/fingerprint‑heavy tracking fails. Consent and transparency are non‑negotiable.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">LLMs alone don’t make software intelligent. Without device signals, history, and app state, agents act blindly. Today’s systems can’t organize or leverage context effectively—leading to irrelevant answers, broken flows, and missed opportunities for personalization.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">AI is inevitable, rewrites aren’t</h3>
+            <h3 class="font-semibold text-lg">Cloud-Only Control is Risky</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">You need agentic capability now—but full rewrites stall roadmaps and risk regressions.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Most agent tool execution today happens in the cloud. That raises latency, privacy, and trust issues. Sensitive operations—like payments or device actions—need local enforcement. Without on-device safeguards, enterprises can’t responsibly deploy agentic automation.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Context is the missing piece</h3>
+            <h3 class="font-semibold text-lg">Legacy Apps Risk Being Left Behind</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">LLMs guess when they should know. Without device/app context, your “AI” can’t act meaningfully.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Enterprises have huge investments in existing mobile apps and IoT platforms. Rebuilding them from scratch for the agentic era is costly and slow. Without a way to retrofit legacy systems, businesses risk missing the AI wave.</p>
         </div>
       </div>
     </div>
@@ -338,35 +338,35 @@ flowchart LR
   <!-- What to do next -->
   <section class="py-12 md:py-20" id="next">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">What to do next — a low‑risk path forward</h2>
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">What to Do in the Agentic Era</h2>
       <div class="mt-6 grid md:grid-cols-2 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Start with dialog streams</h3>
+            <h3 class="font-semibold text-lg">Embrace Dialog Streams</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Layer conversational flows alongside existing UI. No big rewrites—just alternate paths to outcomes.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Redesign interactions around conversations instead of clicks. Agents should guide users like a proactive concierge—understanding intent, taking initiative, and reducing friction. Conversational UX is the new baseline for engagement.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Capture useful context</h3>
+            <h3 class="font-semibold text-lg">Engineer Context, Not Just Models</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Stream location, sensors, and app telemetry into a memory layer for personalization and reasoning.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Go beyond LLMs by building a robust context layer. Capture signals, histories, and app states, then organize them into memories agents can reason with. The quality of context determines the quality of intelligence.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Keep actions on‑device</h3>
+            <h3 class="font-semibold text-lg">Shift Control to the Edge</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Run sensitive actions locally with least‑privilege scopes, per‑action consent, and full audit.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Keep sensitive actions local. Enforce policies and user consent directly on-device, where privacy, latency, and trust matter most. Cloud brains should infer, but device hands must execute safely under a sandbox.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Bridge cloud ↔ edge</h3>
+            <h3 class="font-semibold text-lg">Retrofit, Don’t Rebuild</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Do inference in the cloud, execute safely on the device. Fast, private, and policy‑controlled.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Transform existing apps and devices into agentic systems with minimal disruption. Instead of rewriting legacy platforms, layer in middleware that adds context, conversation, and secure automation—extending the life and value of current investments.</p>
         </div>
       </div>
     </div>
