--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -121,10 +121,11 @@
           <!-- 标语对 -->
           <div class="mb-6">
             <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
-              将任何应用变成 Agent
+              应用觉醒，化身智能体
             </h1>
             <p class="mt-3 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-              汇聚上下文、保障执行安全，解锁 Agentic 体验——连接云端智能与设备侧执行。
+              对话替代点击，智能直达体验。
+              让应用开口说话，主动服务，不再是冷冰冰的点击和菜单，而是能理解意图、直接行动的智能体。云端推理，本地执行，为你带来可信赖的对话式体验。
             </p>
           </div>
           <div id="hero-variants" class="relative">
@@ -215,30 +216,30 @@ flowchart LR
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">僵硬 UX 抓不住意图</h3>
+            <h3 class="font-semibold text-lg">点击流已跟不上</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">用户期望自然、主动的帮助；点击式流程丢失上下文、转化下滑。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">围绕点击与菜单构建的网站与应用在 AI 时代过于被动。用户期望的是能理解意图并主动行动的智能体，而不是无休止的导航。传统点击流式 UX 正在成为参与度的障碍。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">隐私合规让旧方法失效</h3>
+            <h3 class="font-semibold text-lg">上下文碎片化且易丢失</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">依赖 Cookie/指纹的跟踪难以为继；同意与透明成为基础要求。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">仅靠 LLM 并不能让软件真正“聪明”。缺少设备信号、历史与应用状态，智能体就像闭着眼行动。如今的系统难以有效组织与利用上下文——导致答非所问、流程破碎、也错失个性化机会。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">AI 必然到来，全面重写不可承受</h3>
+            <h3 class="font-semibold text-lg">纯云端控制风险高</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">需要尽快具备 Agentic 能力，但大规模重写拖慢节奏、风险高。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">当下大多数智能体工具执行都在云端完成，带来时延、隐私与信任问题。支付或设备动作等敏感操作需要本地强制与治理。没有设备侧保障，企业难以负责任地部署 Agentic 自动化。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">上下文是关键缺口</h3>
+            <h3 class="font-semibold text-lg">遗留应用面临被淘汰的风险</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">没有设备/应用上下文，LLM 只能“猜”，难以做出有意义的行动。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">企业在现有移动应用与 IoT 平台上投入巨大。从零重建以适配 Agentic 时代既昂贵又缓慢。若无法为遗留系统快速加装“智能体化”能力，业务就可能错过这一波 AI 红利。</p>
         </div>
       </div>
     </div>
@@ -247,35 +248,35 @@ flowchart LR
   <!-- 接下来怎么做 -->
   <section class="py-12 md:py-20" id="next">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">接下来怎么做 —— 低风险升级路径</h2>
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">Agentic 时代该怎么做</h2>
       <div class="mt-6 grid md:grid-cols-2 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">从“对话流”开始</h3>
+            <h3 class="font-semibold text-lg">拥抱对话流</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">在现有 UI 旁增量接入对话流程，无需大改，提供达成目标的替代路径。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">重构交互，让“对话”取代“点击”。智能体应像主动的礼宾一样引导用户——理解意图、主动出手、减少阻力。对话式 UX 将成为新的参与度基线。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">采集有用上下文</h3>
+            <h3 class="font-semibold text-lg">设计“上下文”，不止于模型</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">将位置、传感器、应用信号沉淀为记忆层，支撑个性化与更好推理。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">超越 LLM，构建坚实的上下文层。采集信号、历史与应用状态，并将其组织为可被智能体推理的“记忆”。上下文的质量决定智能的质量。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">在设备侧执行动作</h3>
+            <h3 class="font-semibold text-lg">将控制前移到边缘</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">最小权限、逐次同意、全量审计；敏感动作本地运行更安全。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">让敏感动作本地完成。在设备侧直接执行策略与用户同意——隐私、时延与信任最关键的地方。云端“脑”负责推理，设备“手”在沙箱内安全执行。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">桥接 云 ↔ 边</h3>
+            <h3 class="font-semibold text-lg">以“加装”为先，而非重写</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">云端推理，设备安全执行；更快、更私密、策略可控。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">最小扰动地把现有应用与设备升级为智能体系统。无需重建遗留平台，通过中间件叠加上下文、对话与安全自动化——延长现有投入的寿命与价值。</p>
         </div>
       </div>
     </div>
