--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -125,7 +125,6 @@
             </h1>
             <p class="mt-3 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
               对话替代点击，智能直达体验。
-              让应用开口说话，主动服务，不再是冷冰冰的点击和菜单，而是能理解意图、直接行动的智能体。云端推理，本地执行，为你带来可信赖的对话式体验。
             </p>
           </div>
           <div id="hero-variants" class="relative">
@@ -133,7 +132,7 @@
             <div class="hero-variant" data-variant="a">
               <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">从“点击”到“对话”</h3>
               <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-                将静态、以点击为主的应用升级为以对话为主的体验。用户不再不停找菜单和购物车，而是与懂意图、可执行的“智能体”互动。对话取代点击，让日常任务以更自然、主动且更具参与感的方式完成。
+                让应用开口说话，主动服务，不再是冷冰冰的点击和菜单，而是能理解意图、直接行动的智能体。收集上下文，守护安全执行，解锁全新的智能体验——让云端大脑与本地行动无缝衔接。
               </p>
             </div>
             <!-- 变体 B（更大胆） -->
