--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -1,3 +1,6 @@
+---
+layout: null
+---
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -61,14 +64,7 @@
               <svg class="h-3.5 w-3.5 opacity-70" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.173l3.71-3.942a.75.75 0 111.08 1.04l-4.24 4.5a.75.75 0 01-1.08 0l-4.24-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd"/></svg>
             </button>
             <div class="invisible opacity-0 group-hover:visible group-hover:opacity-100 group-focus-within:visible group-focus-within:opacity-100 transition-opacity duration-150 absolute right-0 mt-2 w-80 rounded-xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900 shadow-lg py-2">
-              <div class="px-4 py-2 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">最新文章</div>
-              <a href="/zh/neuronkit/whitepaper/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">电商：从点击流到对话流</a>
-              <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">从点击流到对话流（可视化）</a>
-              <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">面向 Agent 的沙箱</a>
-              <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agentic 界面报告</a>
-              <a href="/zh/neuronkit/insights/agent-cage/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agent 的“牢笼”</a>
-              <div class="my-2 border-t border-zinc-200 dark:border-zinc-800"></div>
-              <a href="/zh/neuronkit/insights/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">洞见首页</a>
+              {% include insights-menu.html %}
             </div>
           </div>
         </nav>
@@ -94,14 +90,7 @@
         <a href="#next" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">行动</a>
         <a href="#features" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">方案</a>
         <div class="mt-1">
-          <div class="px-3 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">洞见</div>
-          <a href="/zh/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">电商：从点击流到对话流</a>
-          <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">从点击流到对话流（可视化）</a>
-          <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">面向 Agent 的沙箱</a>
-          <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agentic 界面报告</a>
-          <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agent 的“牢笼”</a>
-          <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">智能体经济新指南</a>
-          <a href="/zh/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">洞见首页</a>
+          {% include insights-menu.html %}
         </div>
         <div class="mt-2 grid gap-2">
           <a href="https://finogeeks.github.io/agentic" target="_blank" rel="noreferrer" class="px-3 py-2 rounded-lg border border-zinc-300 dark:border-zinc-700">GitHub</a>
