centralize insights menu. revise challenges section

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -308,9 +308,9 @@ flowchart LR
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">Cloud-Only Control is Risky</h3>
+            <h3 class="font-semibold text-lg">Edge Collaboration is Critical</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Most agent tool execution today happens in the cloud. That raises latency, privacy, and trust issues. Sensitive operations—like payments or device actions—need local enforcement. Without on-device safeguards, enterprises can’t responsibly deploy agentic automation.</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Many apps assume integrating AI means just embedding a chat interface—but that can’t trigger local app features or coordinate with users. True intelligence requires cloud inference paired with on-device execution, enabling AI to act alongside users securely and effectively.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
