--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -204,28 +204,28 @@ flowchart LR
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">点击流已跟不上</h3>
+            <h3 class="font-semibold text-lg">点击式用户体验已经落伍</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">围绕点击与菜单构建的网站与应用在 AI 时代过于被动。用户期望的是能理解意图并主动行动的智能体，而不是无休止的导航。传统点击流式 UX 正在成为参与度的障碍。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">传统的点击式交互模式正在成为过去。用户渴望应用能理解需求、主动响应，而不是被动地一层层点击导航，反复寻找深埋在App里的功能。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">上下文碎片化且易丢失</h3>
+            <h3 class="font-semibold text-lg">上下文分散，智能无从谈起</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">仅靠 LLM 并不能让软件真正“聪明”。缺少设备信号、历史与应用状态，智能体就像闭着眼行动。如今的系统难以有效组织与利用上下文——导致答非所问、流程破碎、也错失个性化机会。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">仅靠 LLM 并不能让软件真正“聪明”。缺少场景信号、历史与应用状态，智能体就像“盲人摸象”，无法做出准确判断。结果是答非所问、流程中断、个性化缺失。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">纯云端控制风险高</h3>
+            <h3 class="font-semibold text-lg">端侧人机协同缺失</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">当下大多数智能体工具执行都在云端完成，带来时延、隐私与信任问题。支付或设备动作等敏感操作需要本地强制与治理。没有设备侧保障，企业难以负责任地部署 Agentic 自动化。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">许多应用以为接入 AI 就够智能，但仅嵌入聊天界面无法与本地功能闭环，AI也无法真正与用户协作。需要云端推理+端侧执行，让 AI 与应用功能深度联动，用户可控、协同高效。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
-            <h3 class="font-semibold text-lg">遗留应用面临被淘汰的风险</h3>
+            <h3 class="font-semibold text-lg">传统应用可能被淘汰</h3>
           </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">企业在现有移动应用与 IoT 平台上投入巨大。从零重建以适配 Agentic 时代既昂贵又缓慢。若无法为遗留系统快速加装“智能体化”能力，业务就可能错过这一波 AI 红利。</p>
         </div>
