--- a/zh/neuronkit/insights/index.html
+++ b/zh/neuronkit/insights/index.html
@@ -9,12 +9,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Enable dark mode based on user preference
+    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      document.documentElement.classList.add('dark');
+    }
+  </script>
   <style>
     body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
   </style>
 </head>
-<body class="bg-zinc-50 text-zinc-900">
-  <header class="border-b border-zinc-200/60 bg-white">
+<body class="bg-zinc-50 text-zinc-900 dark:bg-zinc-950 dark:text-zinc-100">
+  <header class="border-b border-zinc-200/60 bg-white dark:border-zinc-800/60 dark:bg-zinc-950/40 backdrop-blur">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
       <a href="/zh/neuronkit/index.html" class="flex items-center gap-2 font-semibold text-lg">
         <span class="inline-flex h-8 w-8 rounded-xl bg-gradient-to-br from-cyan-500 via-indigo-500 to-emerald-500"></span>
@@ -28,7 +34,7 @@
         <a href="/zh/neuronkit/insights/" class="text-indigo-600 font-medium">洞见</a>
       </nav>
       <!-- Mobile hamburger -->
-      <button id="mobile-menu-button" class="md:hidden inline-flex items-center justify-center rounded-xl border border-zinc-300 p-2 hover:bg-zinc-100" aria-label="打开导航" aria-expanded="false">
+      <button id="mobile-menu-button" class="md:hidden inline-flex items-center justify-center rounded-xl border border-zinc-300 dark:border-zinc-700 p-2 hover:bg-zinc-100 dark:hover:bg-zinc-900" aria-label="打开导航" aria-expanded="false">
         <svg id="icon-hamburger" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h18M3 12h18M3 18h18"/></svg>
         <svg id="icon-close" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 18L18 6M6 6l12 12"/></svg>
       </button>
@@ -37,23 +43,23 @@
 
   <!-- Mobile menu panel -->
   <div id="mobile-menu" class="md:hidden fixed inset-x-0 top-16 z-40 hidden">
-    <div class="mx-4 rounded-2xl border border-zinc-200 bg-white shadow-lg overflow-hidden">
+    <div class="mx-4 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-950 shadow-lg overflow-hidden">
       <nav class="p-4 grid gap-2 text-sm">
-        <a href="/zh/neuronkit/index.html#challenges" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">变革</a>
-        <a href="/zh/neuronkit/index.html#next" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">行动</a>
-        <a href="/zh/neuronkit/index.html#features" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">方案</a>
+        <a href="/zh/neuronkit/index.html#challenges" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">变革</a>
+        <a href="/zh/neuronkit/index.html#next" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">行动</a>
+        <a href="/zh/neuronkit/index.html#features" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">方案</a>
         <div class="mt-1">
-          <div class="px-3 text-xs uppercase tracking-wide text-zinc-500">洞见</div>
-          <a href="/zh/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">电商重构：从点击流到对话流</a>
-          <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">从点击到对话：可视化指南</a>
-          <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agent 沙箱实战手册</a>
-          <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Agentic 界面：对话式混合UI设计</a>
-          <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">智能体的牢笼：自治系统安全</a>
-          <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">智能体经济：AI时代的货币化</a>
-          <a href="/zh/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">洞见首页</a>
+          <div class="px-3 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">洞见</div>
+          <a href="/zh/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">电商重构：从点击流到对话流</a>
+          <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">从点击到对话：可视化指南</a>
+          <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agent 沙箱实战手册</a>
+          <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agentic 界面：对话式混合UI设计</a>
+          <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">智能体的牢笼：自治系统安全</a>
+          <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">智能体经济：AI时代的货币化</a>
+          <a href="/zh/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">洞见首页</a>
         </div>
         <div class="mt-2 grid gap-2">
-          <a href="/zh/neuronkit/index.html" class="px-3 py-2 rounded-lg border border-zinc-300">返回 NeuronKit</a>
+          <a href="/zh/neuronkit/index.html" class="px-3 py-2 rounded-lg border border-zinc-300 dark:border-zinc-700">返回 NeuronKit</a>
         </div>
       </nav>
     </div>
@@ -62,43 +68,43 @@
   <main class="py-12 md:py-20">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <h1 class="text-3xl md:text-4xl font-bold">洞见</h1>
-      <p class="mt-3 text-zinc-700 max-w-3xl">收录关于 Agentic 用户体验、沙箱安全与 Agent 原生 Web 的深度文章、框架与参考架构。</p>
+      <p class="mt-3 text-zinc-700 dark:text-zinc-300 max-w-3xl">收录关于 Agentic 用户体验、沙箱安全与 Agent 原生 Web 的深度文章、框架与参考架构。</p>
 
       <div class="mt-8 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <a href="/zh/neuronkit/whitepaper/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
+        <a href="/zh/neuronkit/whitepaper/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">报告</div>
           <h2 class="mt-1 font-semibold">电商重构：从点击流到对话流</h2>
-          <p class="mt-2 text-sm text-zinc-600">对话流与 Agentic 体验如何重塑漏斗、个性化与度量体系。</p>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">对话流与 Agentic 体验如何重塑漏斗、个性化与度量体系。</p>
         </a>
 
-        <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">洞见</div>
+        <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">洞见</div>
           <h2 class="mt-1 font-semibold">从点击到对话：可视化指南</h2>
-          <p class="mt-2 text-sm text-zinc-600">图表展示 Agentic 转型与生成式 UI。</p>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">图表展示 Agentic 转型与生成式 UI。</p>
         </a>
 
-        <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
+        <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">白皮书</div>
           <h2 class="mt-1 font-semibold">Agent 沙箱实战手册</h2>
-          <p class="mt-2 text-sm text-zinc-600">面向代理系统的沙箱分类与设计模式。</p>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">面向代理系统的沙箱分类与设计模式。</p>
         </a>
 
-        <a href="/zh/neuronkit/insights/agentic-interface/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
+        <a href="/zh/neuronkit/insights/agentic-interface/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">报告</div>
           <h2 class="mt-1 font-semibold">Agentic 界面：对话式混合UI设计</h2>
-          <p class="mt-2 text-sm text-zinc-600">协议栈、设计原则与典型案例。</p>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">协议栈、设计原则与典型案例。</p>
         </a>
 
-        <a href="/zh/neuronkit/insights/agent-cage/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
+        <a href="/zh/neuronkit/insights/agent-cage/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">白皮书</div>
           <h2 class="mt-1 font-semibold">智能体的牢笼：自治系统安全</h2>
-          <p class="mt-2 text-sm text-zinc-600">自治系统的沙箱与治理层实践。</p>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">自治系统的沙箱与治理层实践。</p>
         </a>
 
-        <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
+        <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">报告</div>
           <h2 class="mt-1 font-semibold">智能体经济：AI时代的货币化</h2>
-          <p class="mt-2 text-sm text-zinc-600">从眼球经济到智能体经济：AI 原生商业模型、金融基础设施与信任框架。</p>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">从眼球经济到智能体经济：AI 原生商业模型、金融基础设施与信任框架。</p>
         </a>
       </div>
 
@@ -111,10 +117,10 @@
     </div>
   </main>
 
-  <footer class="py-10 border-t border-zinc-200/60">
+  <footer class="py-10 border-t border-zinc-200/60 dark:border-zinc-800/60">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between">
-      <p class="text-sm text-zinc-600">© <span id="y"></span> NeuronKit</p>
-      <div class="text-sm text-zinc-600">云端“脑”，设备“手”。全面可控。</div>
+      <p class="text-sm text-zinc-600 dark:text-zinc-400">© <span id="y"></span> NeuronKit</p>
+      <div class="text-sm text-zinc-600 dark:text-zinc-400">云端“脑”，设备“手”。全面可控。</div>
     </div>
   </footer>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
